--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
 <body>
 <div ng-controller="MyController">
 <img src="pics/logo.png"><br>
-	<div id="main" ng-submit="submit()">
+	<form name="myForm" id="main" ng-submit="submit()">
 		<input ng-model="keyword" placeholder="Search Instagram" required autofocus>
 		<input type="submit" value="submit"></input>
-	</div>
+	</form>
 
 	<div nh-show="errorMessage">{{errorMessage}}</div>
 
 	<ul>
 		<li ng-repeat= "result in results">
-			<img ng-src="result.images">
+		    <a href="{{result.images.link}}">
+		    <img src="{{result.images.low_resolution.url}}"> </a>
+			
 		</li>
 	</ul>
 
