--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
 <body>
 <div ng-controller="MyController">
 <img src="pics/logo.png"><br>
-	<form name="myForm" id="main" ng-submit="submit()">
+	<form name="myForm" id="main" ng-submit="submit()" novalidate>
 		<input ng-model="keyword" placeholder="Search Instagram" required autofocus>
 		<input type="submit" value="submit"></input>
 	</form>
 
-	<div nh-show="errorMessage">{{errorMessage}}</div>
+	<div ng-show="errorMessage">{{errorMessage}}</div>
+
+	<div ng-show="searchMessage">{{searchMessage}}</div>
 
 	<ul>
 		<li ng-repeat= "result in results">
-		    <a href="{{result.images.link}}">
+		    <a href="{{result.images.link}}" target="_blank">
 		    <img src="{{result.images.low_resolution.url}}"> </a>
 			
 		</li>
